ferric/tests/ui/syntax_err_01.stderr
error: expected `mod`
 --> tests/ui/syntax_err_01.rs:5:5
  |
5 |     modu grass;
  |     ^^^^
